testsuite/tests/builtins/print/non_bool_new_line/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ print("Value", "Not a bool")
   │ ──────────────┬─────────────  
   │               ╰─────────────── Expecting a "Bool" for the parameter "new_line", got a "Str"
───╯
